[package]
name = "redux-rs"
version = "0.0.1"
authors = ["Jeroen Vervaeke <jeroen@vervaeke.nu>"]
description = "Redux-rs is a predictable state container for rust apps. It is heavily inspired by redux"
repository = "https://github.com/jeroenvervaeke/redux-rs"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["redux", "state", "predictable"]

[dependencies]

[badges]
travis-ci = { repository = "jeroenvervaeke/redux-rs", branch = "master" }
codecov = { repository = "jeroenvervaeke/redux-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }